# protector

./: .dockerignore  .env_sample  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.py  start.sh
bot/: alertbot.py
catcher/: Pipfile  main.py
dashboard/: Dockerfile
detector/: danezis.py  detectors.py  get.py  wright.py
detector/utils/: aux.py
fetch/: collector.py  db.py  log.py  stats.py
fetch/models/: applocale.py  bandwidth.py  bridges.py  meta.py  modules.py  networksize.py  onionservices.py  perfbuild.py  perffailures.py  perfroundtrip.py  perfthroughput.py  perfttd.py  users.py
grafana_data/: grafana.db
gui/: package-lock.json  package.json
utils/: db.py  env.py  log.py
