[tool.poetry]
name = "protector"
version = "0.1.0"
description = ""
authors = ["David Garcia"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
python-dateutil = "^2.8.2"
mysql-connector-python = "^8.0.27"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
